--- a/NON-RESPONSIVE/NETFLIX/stylesheet.css
+++ b/NON-RESPONSIVE/NETFLIX/stylesheet.css
@@ -2,12 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* overflow-x: hidden; */
 }
 
 body {
-
     background-color: rgb(35, 35, 35);
-
 }
 
 /* HEADER BANNER AND SIGN IN WITH EMAIL */
